Version-0.1-00/Manifests/2.2_Mariadb_SVC.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress_mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
  clusterIP: None
