Version-0.1-00/Manifests/4.2_Nginx_SVC.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: wordpressmariadb
  labels:
    app: nginx
spec:
  ports:
    - port: 80
  selector:
    app: nginx
  type: ClusterIP
